AWS-EKS/5.ApplicationLoadBalancer/Manifests/ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: None
