AWS-EKS/5.ApplicationLoadBalancer/Manifests/ingressLB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    # ALB Ingress Controller annotations
    kubernetes.io/ingress.class: "alb" # Tells the controller to use an ALB
    alb.ingress.kubernetes.io/scheme: internet-facing  # internet-facing or internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: <your-app-name>.<your-cluster-name>.<aws-region>.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service
            port:
              number: 80
